Fix overflow email address

--- a/src/app/get-in-touch/get-in-touch.component.scss
+++ b/src/app/get-in-touch/get-in-touch.component.scss
@@ -15,15 +15,21 @@ h3 {
 }
 
 .contact-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 2rem;
-}
 
-.contact-item {
-    span {
+        span {
         font-weight: bold;
+        text-align: center;
     }
 
     i {
         margin-right: 0.5rem;
+    }
+
+    p {
+        text-align: center;
     }
 }
